--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.44",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
